manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-server
  namespace: default
  labels:
    app: webhook-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-server
  template:
    metadata:
      labels:
        app: webhook-server
    spec:
      containers:
        - name: webhook-server
          image: ttl.sh/cucumber/protect-webhook:latest@sha256:3b4af0ee1d7f41b28723ba1de5a876267202f2a6e434e109706e59e41746054a
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
              name: https
          volumeMounts:
            - name: webhook-tls
              mountPath: /certs
              readOnly: true
      volumes:
        - name: webhook-tls
          secret:
            secretName: webhook-server-tls
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: webhook-service
  namespace: default
  labels:
    app: webhook-server
spec:
  ports:
    - port: 443
      targetPort: 8443
      protocol: TCP
  selector:
    app: webhook-server
  type: ClusterIP

---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: runtime-class-injector
  annotations:
    cert-manager.io/inject-ca-from: default/webhook-ca
webhooks:
  - name: runtime-class-injector.edera.dev
    clientConfig:
      service:
        name: webhook-service
        namespace: default
        path: /mutate
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    admissionReviewVersions: ["v1"]
    sideEffects: None
